tests/NormalTests/paczka1/small_fuzzy/61272067.err
Error in line 7: EkP A834 31,7
Error in line 8: EkP A696 84,0
